Bug 1607050 - Parse await as an identifier in fields initializers r=anba

The proposal specifies class fields as follows:
  FieldDefinition[Yield, Await]:
    ClassElementName[?Yield, ?Await] Initializer[In, ~Yield, ~Await]opt

This means that await shouldn't be parsed according to the context
where the class is defined: it should always be parsed as an
identifier inside initializers.

Differential Revision: https://phabricator.services.mozilla.com/D58721