js/src/tests/non262/fields/await-identifier-module-1.js
@@ -1,0 +1,3 @@
+// |reftest| error:SyntaxError module
+
+async () => class { [await] = 1 };
