js/src/tests/non262/fields/await-identifier-module-3.js
@@ -1,0 +1,3 @@
+// |reftest| error:SyntaxError module
+
+async () => class { x = await 1 };
